[metadata]
name = capsulet
version = 1.0.01
license = MIT
description = Web framework written in Python.
author = Python Documentation System
url = https://github.com/xanthu/pds
classifiers = 
  Development Status :: 1 - Planning
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
